--- a/css/style.css
+++ b/css/style.css
@@ -182,16 +182,17 @@ h3 a {
   
 }
 
-@media only screen and (max-width: 360px) {
-    .navbar-brand {
-        font-size: 10px !important;
-    }
-}
-
 @media only screen and (max-width: 688px) {
     .navbar-brand {
         font-size: 40px !important;
     }
 }
-
+@media only screen and (max-width: 360px) {
+    .navbar-brand {
+        font-size: 30px !important;
+    }
+    .welcome{
+        margin-top: -20px;
+    }
+}
 /********************************************************* End media  screen****************************************************/
