change font color today

--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ h3 a {
     letter-spacing: 2px;
     font-size: 60px;
     font-weight: 500 !important;
-    color: burlywood !important;
+    color: #ffd036cf !important;
 }
 
 .opra {
